package joc.player;

public enum PlayerStatus {
    PLAYER_COLLIDE,
    PLAYER_COLLIDE_LEFT,
    PLAYER_COLLIDE_RIGHT,
    PLAYER_COLLIDE_TOP,
    PLAYER_COLLIDE_BOTTOM,
    PLAYER_NO_COLLIDE,
    PLAYER_IN_WATER
}
