@startuml

title __PLAYER's Class Diagram__\n

  namespace joc {
    namespace player {
      enum Directions {
        DOWN
        LEFT
        LEFT_DOWN
        LEFT_UP
        NOTHING
        RIGHT
        RIGHT_DOWN
        RIGHT_UP
        UP
      }
    }
  }
  

  namespace joc {
    namespace player {
      class joc.player.Player {
          ~ combinedMovement : boolean
          {static} - ARCHER_ENEMY_DETECTION_CIRCLE_RADIUS : int
          - FRAME_PLAYER_COLLIDE_SPEED : float
          - FRAME_PLAYER_MOVE_SPEED : float
          {static} - REGULAR_ENEMY_DETECTION_CIRCLE_RADIUS : int
          {static} - ROCK_THROWER_ENEMY_DETECTION_CIRCLE_RADIUS : int
          - actualPlayerSpeed : float
          - dead : boolean
          - enemies : List<Enemy>
          - facingRight : boolean
          - heartsCount : int
          - keyCount : int
          - playerSpriteLeft : BufferedImage
          - playerSpriteRight : BufferedImage
          - surroundingEnemies : List<HumanoidEnemy>
          - x : float
          - y : float
          + Player()
          + addKey()
          + draw()
          + getHeartsCount()
          + getHit()
          + getInputDirection()
          + getKeyCount()
          + getLocationStatus()
          + getNextProjectileDirection()
          + getSurroundingEnemies()
          + getX()
          + getY()
          + heal()
          + isDead()
          + setEnemies()
          + setMovementListener()
          + update()
          - getDetectedByEnemies()
          - stopIfEnemyIsAround()
      }
    }
  }
  

  namespace joc {
    namespace player {
      enum PlayerStatus {
        PLAYER_COLLIDE
        PLAYER_COLLIDE_BOTTOM
        PLAYER_COLLIDE_LEFT
        PLAYER_COLLIDE_RIGHT
        PLAYER_COLLIDE_TOP
        PLAYER_IN_WATER
        PLAYER_NO_COLLIDE
      }
    }
  }
  

  joc.player.Player o-- joc.player.PlayerStatus : locationStatus
  joc.player.Player o-- joc.listener.MovementListener : movementListener
  joc.player.Player o-- joc.projectile.ProjectileDirection : projectileDirection


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
